完成、スクロール防止バージョン

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <title>Kengo Masunari</title>
   </head>
-  <body>
+  <body class="body">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script
